Remove warnings de código Deprecated
Resolve #7